switch to graalvm